Port configs, saved data, codecs, toasts, options screen and other 1.21-only vanilla APIs
- access transformer converted to SRG names (scripts/at_to_srg.py); 1.21-only entries dropped
- ForgeConfigSpec, DFU 6 codecs (BackportCodecs.dispatchedMap), SavedData without Factory
- ClipContext built from a CollisionContext through SableClipContexts
- Java 21 collection methods, partial tick, NBT accounting and component helpers

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01SwpTzQJLcFWbn1oizFRnf3