@@ -116,7 +116,7 @@ public class SubLevelTargetSelector extends SubLevelTarget {
                 if (subLevels.isEmpty()) {
                     yield Collections.emptySet();
                 }
-                yield Collections.singleton(subLevels.getLast());
+                yield Collections.singleton(subLevels.get(subLevels.size() - 1));
             }
         };
 
